--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "dependencies": {
     "express": "~3.2.2",
-    "jade": "~0.30.0"
+    "jade": "~0.30.0",
+    "socket.io": "~0.9.14"
   },
   "engines": {
     "node": "0.10.x",
