--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
 		"underscore-amd": "~1.4.4",
 		"requirejs": "~2.1.5",
 		"decaying-accumulator": "begriffs/decaying-accumulator",
-		"socket.io-client": "0.9.11"
+		"socket.io-client": "0.9.11",
+		"almond": "0.2.5"
 	},
 	"ignore": [
 		"**/.*",
