--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "3.2.2",
     "jade": "0.30.0",
     "socket.io": "0.9.14",
-    "mongoose": "3.6.10"
+    "mongoose": "3.6.10",
+    "decaying-accumulator": "0.0.4"
   },
   "devDependencies": {
     "grunt": "0.4.1",
