--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "grunt-contrib-jshint": "0.4.3"
   },
   "engines": {
-    "node": "0.10.x",
+    "node": "0.8.x",
     "npm": "1.2.x"
+  },
+  "subdomain": "begriffs-pace",
+  "scripts": {
+    "start": "node server.js"
   }
 }
