--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "3.2.2",
     "jade": "0.30.0",
-    "socket.io": "0.9.14"
+    "socket.io": "0.9.14",
+    "stylus": "0.32.1"
   },
   "devDependencies": {
     "grunt": "0.4.1",
