--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pace",
   "description": "crowd voting for presentation speed",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "private": true,
   "dependencies": {
     "express": "3.2.2",
@@ -14,7 +14,8 @@
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-contrib-requirejs": "0.4.0",
-    "grunt-contrib-jshint": "0.4.3"
+    "grunt-contrib-jshint": "0.4.3",
+    "grunt-contrib-stylus": "0.5.0"
   },
   "engines": {
     "node": "0.8.x",
