--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pace",
+  "name": "groupthink",
   "description": "crowd voting for presentation speed",
   "version": "0.0.6",
   "private": true,
