--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt": "0.4.1",
     "grunt-contrib-requirejs": "0.4.0",
     "grunt-contrib-jshint": "0.4.3",
-    "grunt-contrib-stylus": "0.5.0"
+    "grunt-contrib-stylus": "0.5.0",
+    "grunt-contrib-watch": "0.4.3"
   },
   "engines": {
     "node": "0.8.x",
